--- a/github/workflows/scraper.yml
+++ b/github/workflows/scraper.yml
@@ -1,1 +1,27 @@
+name: AZair Scraper
+
+on:
+  schedule:
+    - cron: '0 6 * * *'  # codziennie o 6:00 UTC
+  workflow_dispatch:
+
+jobs:
+  scrape:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repo
+      uses: actions/checkout@v3
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
+
+    - name: Install dependencies
+      run: |
+        pip install -r requirements.txt
+
+    - name: Run scraper
+      run: python azair_scraper.py
 
